--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 org.gradle.workers.max=8
 #
 # Adds the given args to wrapper processes
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1g -XX:+UseG1GC
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1g -XX:+UseG1GC -XX:+UseStringDeduplication
 #
 # Reuse daemon aggressively
 org.gradle.daemon=true
